vault/vault-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: vault
  name: vault
  namespace: vault
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: "vault:0.8.3"
        imagePullPolicy: Always
        args:
        - server
        ports:
        - containerPort: 8200
          name: vault
        livenessProbe:
          httpGet:
            path: /v1/sys/health?&sealedcode=200&uninitcode=200&standbyok=200
            port: avaultpi
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=200
            port: vault
          initialDelaySeconds: 10
          periodSeconds: 5
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
        volumeMounts:
        - mountPath: /vault/config
          name: vault-config
        - mountPath: /vault/tls
          name: vault-etcd-tls
      - name: nginx
        image: "nginx:1.12.1-alpine"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: nginx
        livenessProbe:
          httpGet:
            path: /
            port: nginx
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: nginx
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      serviceAccountName: vault
      volumes:
      - configMap:
          name: nginx
        name: nginx-config
      - configMap:
          name: vault
        name: vault-config
      - secret:
          secretName: vault-etcd-tls
        name: vault-etcd-tls
