vault/vault-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault
  name: vault-api
  namespace: vault
spec:
  ports:
    - name: nginx
      nodePort: 30013
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: vault
  type: NodePort
