vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - name: vault-nginx
      nodePort: 30011
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: vault
  type: NodePort
